--- a/src/index.html
+++ b/src/index.html
@@ -1,1 +1,10 @@
+
+<html>
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Angular Form</title>
+  </head>
+  <body>
 <my-app>loading</my-app>
+</body>
+</html>
