--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,10 @@
 
 <html>
   <head>
+    <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
     <title>Angular Form</title>
   </head>
   <body>
