--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
     <title>Angular Form</title>
   </head>
-  <body>
+  <body mat-app-background>
 <my-app>loading</my-app>
 </body>
 </html>
