--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,6 @@
 
 <!Doctype html>
-<html lang="pt">
+<html lang="pt-">
   <head>
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
