--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
-
-    <title>IMAE</title>
+    <title>IAME</title>
   </head>
   <body mat-app-background>
 <my-app>loading</my-app>
